--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "comic-view",
-  "version": "0.0.0",
+  "author": "legendhl",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "serve": "concurrently 'npm:serve-electron' 'npm:serve-ng' 'npm:open-electron' --color --prefix-colors 'gray,green,cyan'",
+    "serve-electron": "rimraf ./dist/electron && tsc-watch -p ./electron/tsconfig.electron.json --noClear",
+    "serve-ng": "ng serve",
+    "open-electron": "wait-on http-get://localhost:4200 && electron . -t --inspect=5858 --js-flags=\"--expose-gc\""
   },
+  "main": "dist/electron/main.js",
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.3",
@@ -28,10 +34,12 @@
     "@angular/cli": "~9.1.3",
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "concurrently": "^5.2.0",
+    "electron": "^9.0.4",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -40,8 +48,11 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
+    "rimraf": "^3.0.2",
     "ts-node": "~8.3.0",
+    "tsc-watch": "^4.2.8",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "wait-on": "^5.0.1"
   }
 }
