--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^9.1.0",
     "@angular-devkit/build-angular": "~0.901.3",
     "@angular/cli": "~9.1.3",
     "@angular/compiler-cli": "~9.1.3",
@@ -54,5 +55,16 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3",
     "wait-on": "^5.0.1"
+  },
+  "browser": {
+    "http": false,
+    "https": false,
+    "net": false,
+    "path": false,
+    "stream": false,
+    "tls": false,
+    "crypto": false,
+    "constants": false,
+    "fs": false
   }
 }
