--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
-    "electron": "^9.0.4",
+    "electron": "6.0.12",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
