ADD: app package

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "comic-view",
+  "description": "comic viewer",
   "author": "legendhl",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "platform": "darwin",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
     "serve": "concurrently 'npm:serve-electron' 'npm:serve-ng' 'npm:open-electron' --color --prefix-colors 'gray,green,cyan'",
     "serve-electron": "rimraf ./dist/electron && tsc-watch -p ./electron/tsconfig.electron.json --noClear",
     "serve-ng": "ng serve",
-    "open-electron": "wait-on http-get://localhost:4200 && electron . -t --inspect=5858 --js-flags=\"--expose-gc\""
+    "open-electron": "wait-on http-get://localhost:4200 && electron . -t --inspect=5858 --js-flags=\"--expose-gc\"",
+    "build": "npm run build-electron && npm run build-ng && npm run package-electron -- --mac",
+    "replace-electron-env:prod": "mv ./dist/electron/environments/environment.prod.js ./dist/electron/environments/environment.js",
+    "build-electron": "rimraf ./dist/electron && tsc -p ./electron/tsconfig.electron.json --sourceMap false && npm run replace-electron-env:prod",
+    "build-ng": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --prod",
+    "package-electron": "rimraf release && electron-builder --config electron/electron-builder.json"
   },
   "main": "dist/electron/main.js",
   "private": true,
@@ -42,6 +43,7 @@
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "electron": "6.0.12",
+    "electron-builder": "^22.7.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
