--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
-    "jszip": "^3.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "unzipper": "^0.10.11",
+    "zone.js": "~0.10.2",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.1.0",
@@ -52,7 +53,6 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
-    "rimraf": "^3.0.2",
     "ts-node": "~8.3.0",
     "tsc-watch": "^4.2.8",
     "tslint": "~6.1.0",
