--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "electron-prompt": "^1.5.1",
+    "rimraf": "^3.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "unzipper": "^0.10.11",
-    "zone.js": "~0.10.2",
-    "rimraf": "^3.0.2"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.1.0",
