--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "comic-viewer",
   "description": "comic viewer",
   "author": "legendhl",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "platform": "darwin",
   "scripts": {
     "serve": "concurrently 'npm:serve-electron' 'npm:serve-ng' 'npm:open-electron' --color --prefix-colors 'gray,green,cyan'",
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "electron-browser-storage": "^1.0.6",
     "electron-prompt": "^1.5.1",
     "rimraf": "^3.0.2",
     "rxjs": "~6.5.4",
