--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "comic-viewer",
   "description": "comic viewer",
   "author": "legendhl",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "platform": "darwin",
   "scripts": {
     "serve": "concurrently 'npm:serve-electron' 'npm:serve-ng' 'npm:open-electron' --color --prefix-colors 'gray,green,cyan'",
@@ -28,6 +28,7 @@
     "@angular/router": "~9.1.3",
     "electron-browser-storage": "^1.0.6",
     "electron-prompt": "^1.5.1",
+    "node-stream-zip": "^1.13.2",
     "rimraf": "^3.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
